backend/build_error_2.txt
    Checking nusa-panel v0.1.0 (C:\my-project\VPS-HOSTED-PROJECT\nusa-panel-rust)
warning: unused import: `std::path::PathBuf`
 --> src\models\file.rs:7:5
  |
7 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `uuid::Uuid`
 --> src\models\user.rs:8:5
  |
8 | use uuid::Uuid;
  |     ^^^^^^^^^^

warning: unused import: `delete`
 --> src\routes\files.rs:7:14
  |
7 | use rocket::{delete, get, post, put, routes, Route, State};
  |              ^^^^^^

warning: unused import: `DateTime`
 --> src\services\file_service.rs:6:14
  |
6 | use chrono::{DateTime, TimeZone, Utc};
  |              ^^^^^^^^

warning: unused imports: `ChangePermissionsRequest`, `CompressRequest`, `ReadFileRequest`, `permissions_to_octal`, and `permissions_to_string`
  --> src\services\file_service.rs:15:5
   |
15 |     permissions_to_octal, permissions_to_string, ChangePermissionsRequest, CompressRequest,
   |     ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^
16 |     CopyRequest, CreateFileRequest, DeleteRequest, FileContentResponse, FileInfo, FileListResponse,
17 |     FileType, MoveRequest, ReadFileRequest, RenameRequest, WriteFileRequest,
   |                            ^^^^^^^^^^^^^^^

warning: unused import: `UpdateRedisRequest`
  --> src\services\redis_service.rs:14:79
   |
14 | use crate::models::{EnableRedisRequest, RedisInstance, RedisInstanceResponse, UpdateRedisRequest};
   |                                                                               ^^^^^^^^^^^^^^^^^^

warning: unused import: `TimeZone`
 --> src\services\security_service.rs:6:14
  |
6 | use chrono::{TimeZone, Utc};
  |              ^^^^^^^^

warning: unused imports: `Cpu` and `Disk`
  --> src\services\security_service_real.rs:17:15
   |
17 | use sysinfo::{Cpu, Disk, Disks, System};
   |               ^^^  ^^^^

warning: unused import: `rand::Rng`
 --> src\services\system_service.rs:7:5
  |
7 | use rand::Rng; // For simulation
  |     ^^^^^^^^^

warning: unused import: `UserRole`
  --> src\services\user_service.rs:10:60
   |
10 | use crate::models::{UpdateUserRequest, User, UserResponse, UserRole};
   |                                                            ^^^^^^^^

warning: unused import: `crate::config::CONFIG`
  --> src\services\web_server_service.rs:11:5
   |
11 | use crate::config::CONFIG;
   |     ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src\routes\redis.rs:29:16
   |
29 |     Ok(success(status))
   |        ------- ^^^^^^ expected `Option<RedisInstanceResponse>`, found `RedisInstanceResponse`
   |        |
   |        arguments to this function are incorrect
   |
   = note: expected enum `std::option::Option<models::redis::RedisInstanceResponse>`
            found struct `models::redis::RedisInstanceResponse`
help: the return type of this call is `models::redis::RedisInstanceResponse` due to the type of the argument passed
  --> src\routes\redis.rs:29:8
   |
29 |     Ok(success(status))
   |        ^^^^^^^^------^
   |                |
   |                this argument influences the return type of `success`
note: function defined here
  --> src\utils\response.rs:81:8
   |
81 | pub fn success<T: Serialize>(data: T) -> Json<ApiResponse<T>> {
   |        ^^^^^^^               -------
help: try wrapping the expression in `Some`
   |
29 |     Ok(success(Some(status)))
   |                +++++      +

warning: unused variable: `db`
   --> src\routes\users.rs:196:5
    |
196 |     db: &State<Database>,
    |     ^^ help: if this is intentional, prefix it with an underscore: `_db`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `output_comp`
   --> src\services\app_installer_service.rs:176:13
    |
176 |         let output_comp = Command::new("composer")
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_output_comp`

warning: unused variable: `base_path`
   --> src\services\file_service.rs:370:13
    |
370 |         let base_path = Self::get_user_base_path(user_id);
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_base_path`

warning: unused variable: `user_id`
   --> src\services\security_service.rs:231:34
    |
231 |     pub async fn get_access_logs(user_id: &str) -> ApiResult<Vec<AccessLogEntry>> {
    |                                  ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_user_id`

error[E0308]: mismatched types
    --> src\services\web_server_service_real.rs:286:53
     |
286  |         let php_ver = request.php_version.unwrap_or(v.php_version);
     |                                           --------- ^^^^^^^^^^^^^ expected `PhpVersion`, found `String`
     |                                           |
     |                                           arguments to this method are incorrect
     |
help: the return type of this call is `std::string::String` due to the type of the argument passed
    --> src\services\web_server_service_real.rs:286:23
     |
286  |         let php_ver = request.php_version.unwrap_or(v.php_version);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-------------^
     |                                                     |
     |                                                     this argument influences the return type of `unwrap_or`
note: method defined here
    --> C:\Users\zyrex\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\option.rs:1023:12
     |
1023 |     pub fn unwrap_or(self, default: T) -> T {
     |            ^^^^^^^^^

error[E0277]: the trait bound `models::web_server::PhpVersion: Encode<'_, _>` is not satisfied
   --> src\services\web_server_service_real.rs:293:16
    |
293 |         .bind(&php_ver).bind(force_https).bind(is_active).bind(Utc::now()).bind(id)
    |          ----  ^^^^^^^ the trait `Encode<'_, _>` is not implemented for `models::web_server::PhpVersion`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `Encode<'q, DB>`:
              `&'a str` implements `Encode<'a, sqlx::Any>`
              `&'q [u8]` implements `Encode<'q, sqlx::Any>`
              `&T` implements `Encode<'q, DB>`
              `&[u8]` implements `Encode<'_, MySql>`
              `&str` implements `Encode<'_, MySql>`
              `Box<[u8]>` implements `Encode<'_, MySql>`
              `Box<str>` implements `Encode<'_, MySql>`
              `Cow<'_, str>` implements `Encode<'_, MySql>`
            and 39 others
    = note: required for `&models::web_server::PhpVersion` to implement `Encode<'_, _>`
note: required by a bound in `sqlx::query::Query::<'q, DB, <DB as HasArguments<'q>>::Arguments>::bind`
   --> C:\Users\zyrex\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0.7.4\src\query.rs:81:32
    |
81  |     pub fn bind<T: 'q + Send + Encode<'q, DB> + Type<DB>>(mut self, value: T) -> Self {
    |                                ^^^^^^^^^^^^^^ required by this bound in `Query::<'q, DB, <DB as HasArguments<'q>>::Arguments>::bind`

error[E0277]: the trait bound `models::web_server::PhpVersion: Type<_>` is not satisfied
   --> src\services\web_server_service_real.rs:293:16
    |
293 |         .bind(&php_ver).bind(force_https).bind(is_active).bind(Utc::now()).bind(id)
    |          ----  ^^^^^^^ the trait `Type<_>` is not implemented for `models::web_server::PhpVersion`
    |          |
    |          required by a bound introduced by this call
    |
    = help: the following other types implement trait `Type<DB>`:
              `&T` implements `Type<DB>`
              `Box<[u8]>` implements `Type<MySql>`
              `Box<str>` implements `Type<MySql>`
              `Cow<'_, str>` implements `Type<MySql>`
              `Hyphenated` implements `Type<MySql>`
              `IpAddr` implements `Type<MySql>`
              `Ipv4Addr` implements `Type<MySql>`
              `Ipv6Addr` implements `Type<MySql>`
            and 39 others
    = note: required for `&models::web_server::PhpVersion` to implement `Type<_>`
note: required by a bound in `sqlx::query::Query::<'q, DB, <DB as HasArguments<'q>>::Arguments>::bind`
   --> C:\Users\zyrex\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sqlx-core-0.7.4\src\query.rs:81:49
    |
81  |     pub fn bind<T: 'q + Send + Encode<'q, DB> + Type<DB>>(mut self, value: T) -> Self {
    |                                                 ^^^^^^^^ required by this bound in `Query::<'q, DB, <DB as HasArguments<'q>>::Arguments>::bind`

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
warning: `nusa-panel` (lib) generated 15 warnings
error: could not compile `nusa-panel` (lib) due to 4 previous errors; 15 warnings emitted
